# Okuluss

oculuss/: .gitignore  Dockerfile  README.md  TODO.md  pyproject.toml  requirements.txt
oculuss/history/: default_db.sql  supplementation_04_06.sql  supplementation_16_rows.sql
oculuss/src/: .env_example  bot.py
oculuss/src/filters/: no_course.py
oculuss/src/handlers/: build_in_supplementation.py  courses.py  custom_supplementation.py  main_handler.py  new_supplementation.py  other_callbacks.py  quiz_handler.py  send_review.py  stack.py  supplementation_rate.py  support.py  tasks.py
oculuss/src/kb/: feeling_keyboard.py  make_inline_keyboard.py  make_inline_library_keyboard.py  make_inline_wiki_keyboard.py  make_keyboard.py  stack_keyboard.py  supplementation_keyboard.py
oculuss/src/middlewares/: access_mw.py  events_mv.py  user_ban.py
oculuss/src/utils/: config.py  monitoring.py  texts.py
oculuss/src/utils/db/: accept_record.py  achievements.py  build_in_supplementation.py  course.py  custom_supplementation.py  models.py  news.py  quiz.py  rating.py  review.py  settings.py  stack.py  user.py
oculuss/src/utils/gamification/: daily_question.py
oculuss/src/utils/gamification/achievement/: achievements.py  achievements_manager.py
oculuss/src/utils/gamification/feeling/: feeling_monitoring.py
oculuss/src/utils/logging/: logger.py
oculuss/src/utils/news/: news_monitoring.py
oculuss/src/utils/other/: exceptions.py
oculuss_support/: .gitignore  Dockerfile  README.md  TODO.md  pyproject.toml  requirements.txt
oculuss_support/src/: TODO.md  bot.py
(+14 files in other folders)
